# social-media-project

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  entrypoint.sh  nginx.conf  pg-init.sql  supervisord.conf
agents/: .gitignore  config.yaml  pyproject.toml
agents/corda_agents/: agent.py  agent_actions.py  llm.py  llm_costs.py  logging_db.py  logging_json.py  mastodon_client.py  persona.py  reset.py  run.py  run_inject.py
mastodon/config/initializers/: corda_ranker.rb
rankers/: pyproject.toml
rankers/corda_rankers/: app.py  models.py  seen.py  utils.py
rankers/corda_rankers/rankers/: __init__.py  chronological.py  downrank_outrage.py  downrank_toxicity.py  engagement.py  engagement_bridging.py  engagement_homophily.py
rankers/corda_rankers/rankers/core/: __init__.py  score_based.py  single_score.py  viewer_relative.py
rankers/corda_rankers/scorers/: __init__.py  bridging.py  echo_chamber.py  engagement.py  outrage.py  outrage_reference.csv  recency.py  toxicity.py
