[project]
name = "corda-agents"
version = "1.0.0"
description = "LLM-driven virtual users for the Mastodon instance."
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "openai>=1.50",
    "pydantic>=2.5",
    "pyyaml>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["corda_agents"]
